@@ -8,6 +8,7 @@ import org.odpi.openmetadata.commonservices.ffdc.RESTCallToken;
 import org.odpi.openmetadata.commonservices.ffdc.RESTExceptionHandler;
 import org.odpi.openmetadata.commonservices.ffdc.rest.*;
 import org.odpi.openmetadata.frameworks.auditlog.AuditLog;
+import org.odpi.openmetadata.frameworks.openmetadata.enums.ContentStatus;
 import org.odpi.openmetadata.frameworks.openmetadata.enums.ElementStatus;
 import org.odpi.openmetadata.frameworks.openmetadata.enums.ActivityType;
 import org.odpi.openmetadata.frameworks.openmetadata.enums.TermRelationshipStatus;
@@ -20,7 +21,9 @@ import org.odpi.openmetadata.viewservices.glossarymanager.rest.GlossaryTermRelat
 import org.odpi.openmetadata.viewservices.glossarymanager.rest.GlossaryTermStatusListResponse;
 import org.slf4j.LoggerFactory;
 
+import java.util.ArrayList;
 import java.util.Arrays;
+import java.util.List;
 
 
 /**
@@ -306,14 +309,7 @@ public class GlossaryManagerRESTServices extends TokenController
 
             auditLog = instanceHandler.getAuditLog(userId, serverName, methodName);
 
-            response.setStatuses(Arrays.asList(ElementStatus.DRAFT,
-                                               ElementStatus.PREPARED,
-                                               ElementStatus.PROPOSED,
-                                               ElementStatus.APPROVED,
-                                               ElementStatus.REJECTED,
-                                               ElementStatus.ACTIVE,
-                                               ElementStatus.DEPRECATED,
-                                               ElementStatus.OTHER));
+            response.setStatuses(List.of(ContentStatus.values()));
         }
         catch (Throwable error)
         {
